--- a/back/Gemfile
+++ b/back/Gemfile
@@ -10,13 +10,16 @@ gem 'bootsnap', '>= 1.4.4', require: false
 
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem "rspec-rails"
+  gem "factory_bot_rails"
+  gem 'spring-commands-rspec'
+  gem 'pry-rails'
 end
 
 group :development do
   gem 'listen', '~> 3.3'
   gem 'spring'
-  gem "rspec-rails"
-  gem "factory_bot_rails"
+  gem 'spring-watcher-listen'
   gem 'rubocop-airbnb'
 end
 
