--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - TZ=Asia/Tokyo
     volumes:
       - ./back/tmp/db:/var/lib/postgresql/data
+    networks:
+      - app_network
 
   back:
     container_name: back
@@ -18,6 +20,8 @@ services:
       - "8080:3000"
     depends_on:
       - db
+    networks:
+      - app_network
 
   front:
     container_name: front
@@ -29,3 +33,8 @@ services:
       - 3000:3000
     depends_on:
       - back
+    networks:
+      - app_network
+
+networks:
+  app_network:
